tools/gen/23.3-beta/rpk-registry-schema-get.adoc
= rpk registry schema get
:description: rpk registry schema get

Get a schema by version, ID, or by an existing schema.

This returns a lookup of an existing schema or schemas in one of a few
potential (mutually exclusive) ways:

* By version, returning a schema for a required subject and version
* By ID, returning all subjects using the schema, or filtering for one subject
* By schema, checking if the schema has been created in the subject

== Usage

[,bash]
----
rpk registry schema get [SUBJECT] [flags]
----

== Flags

[cols="1m,1a,2a]
|===
|*Value* |*Type* |*Description*

|`--deleted` |- |If true, also return deleted schemas.

|`-h, --help` |- |Help for get.

|`--id` |int |ID to lookup schemas usages of; subject optional.

|`--schema` |string |Schema file to check existence of, must be .avro or .proto; subject required.

|`--schema-version` |string |Schema version to lookup (latest, 0, 1...); subject required.

|`--type` |string |Schema type of the file used to lookup (avro,protobuf); overrides schema file extension.

|`--config` |string |Redpanda or rpk config file; default search paths are ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.

|`-X, --config-opt` |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|`--format` |string |Output format (json,yaml,text,wide,help) (default "text").

|`--profile` |string |rpk profile to use.

|`-v, --verbose` |- |Enable verbose logging.
|===